2010-06-25  Alan McGovern  <amcgovern@novell.com>

	* DesignerProperties.cs: Implement the getter/setter for
	  IsInDesignMode.

2010-06-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ClosingEventArgs.cs:
	* IEditableCollectionView.cs:
	* NewItemPlaceholderPosition.cs:
	* AlternateContentPropertyAttribute.cs:	Update to SL4 final API.

2010-06-02  Alan McGovern  <amcgovern@novell.com>

	* SortDescriptionCollection.cs: use the new extension method
	  to raise the INCC event and remove old (duplicated)
	  boilerplate.

2010-04-23  Alan McGovern  <amcgovern@novell.com>

	* GroupDescription.cs: Implement
	  GroupDescription.ShouldSerializeGroupNames.

2010-04-22  Alan McGovern  <amcgovern@novell.com>

	* GroupDescription.cs: Implement GroupDescription with tests.

2010-04-16  Sebastien Pouliot  <sebastien@ximian.com>

	* DesignerProperties.cs: Added new SL4 RefreshOnlyXmlnsDefinitions
	OnAssemblyReplace property since we need to tag its setter as 
	[SecurityCritical]

2010-03-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* INotifyDataErrorInfo.cs:
	* DataErrorsChangedEventArgs.cs: Added, these have been moved here from
	System.dll in Silverlight 4 RC.

2010-03-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* IEditableCollectionView.cs:
	* NewItemPlaceholderPosition.cs: Update to SL4 beta API.

2009-09-30  Jackson Harper  <jackson@ximian.com>

	* DesignerProperties.cs: Stub out this property. r: lewing

2009-05-22  Alan McGovern  <amcgovern@novell.com>

	* DesignerProperties.cs: Use DependencyProperty.RegisterCore for
	these DPs.

2008-12-18  Sebastien Pouliot  <sebastien@ximian.com>

	* DesignerProperties.cs: Implement since some controls (like DataGrid
	and HyperlinkButton) peek at the value (so throwing would be bad).

2008-11-18  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* DesignerProperties.cs: Corcompare work.

2008-08-08  Fernando Herrera  <fherrera@novell.com>

	* DesignerProperties.cs: Added stub for SL2 beta2
